# quickstart_scaling

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  dfx.json  first_time.sh  package-lock.json  package.json  webpack.config.js
.github/workflows/: codeql-analysis.yml  devskim.yml
src/declarations/quickstart_scaling_frontend/: index.js
src/declarations/quickstart_scaling_index/: index.js  quickstart_scaling_index.did.d.ts  quickstart_scaling_index.did.js
src/quickstart_scaling_bucket/: Cargo.toml  quickstart_scaling_bucket.did
src/quickstart_scaling_bucket/src/: businesslogic.rs  lib.rs  lifetime.rs
src/quickstart_scaling_frontend/assets/: main.css
src/quickstart_scaling_frontend/src/: AddModerator.jsx  App.jsx  Bucket.jsx  FetchContent.jsx  IndexMetrics.jsx  ListBuckets.jsx  PostContent.jsx  bucketAgent.js  index.html
src/quickstart_scaling_index/: Cargo.toml  quickstart_scaling_index.did
src/quickstart_scaling_index/src/: businesslogic.rs  lib.rs  lifetime.rs
