[package]
name = "quickstart_scaling_index"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
getrandom = { version = "0.2.3", features = ["js"]}
rand = "0.7.3"
serde = "1.0.136"
serde_bytes = "0.11.5"
